Update HTML head section with meta and title changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wniosek o Potwierdzenie Niekaralności - Summer RP</title>
+    <title>Wniosek o Potwierdzenie Niekaralności | Summer RP</title>
+    <link rel="icon" href="https://media.discordapp.net/attachments/1396419876989435904/1438248669144154122/logo_strona.png?ex=691630f4&is=6914df74&hm=2f32b1a29d8ea01f160a4bc7088a5ff5d1b00a25192a059772e98e649ced1824&=&format=webp&quality=lossless&width=640&height=640" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* --- Zmienne Kolorów dla Motywu JASNEGO --- */
         :root {
