--- a/public.html
+++ b/public.html
@@ -8,18 +8,35 @@
 <body>
 
 <div class="container">
-    <h1>📑 Wniosek o Niekaralność</h1>
+    <div class="gov-header">
+        <h1>Wniosek o Zaświadczenie o Niekaralności</h1>
+        <div class="subtitle">Formularz elektroniczny – dane weryfikowane przez administrację</div>
+    </div>
 
-    <form id="form">
-        <input name="discord" placeholder="Nick Discord" required>
-        <input name="name" placeholder="Imię" required>
-        <input name="surname" placeholder="Nazwisko" required>
-        <input name="pesel" placeholder="ID Roblox" required>
-        <textarea name="reason" placeholder="Cel" required></textarea>
-        <button>Wyślij</button>
+    <form id="criminalRecordForm">
+        <label>Nick Discord</label>
+        <input name="discord_nick" required>
+
+        <label>Imię</label>
+        <input name="ic_name" required>
+
+        <label>Nazwisko</label>
+        <input name="ic_surname" required>
+
+        <label>PESEL / ID Roblox</label>
+        <input name="pesel" required>
+
+        <label>Cel / powód</label>
+        <textarea name="reason" required></textarea>
+
+        <button id="submitBtn">Wyślij wniosek</button>
     </form>
 
-    <div id="msg"></div>
+    <div id="message"></div>
+
+    <div class="footer-info">
+        ⏱ Standardowy czas rozpatrzenia wniosku: do 12 godzin
+    </div>
 </div>
 
 <script src="app.js"></script>
