--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wniosek o Potwierdzenie Niekaralności | Summer RP</title>
-<link rel="icon" href="https://media.discordapp.net/attachments/1396419876989435904/1438248669144154122/logo_strona.png" type="image/x-icon">
+<link rel="icon" href="https://media.discordapp.net/attachments/1396419876989435904/1442902681135087757/image-removebg-preview_1.png?ex=694eac57&is=694d5ad7&hm=9b28d1770bc2e1dd28911c59bf87549d77991f8974ab14e68a524ef1f1a77867&=&format=webp&quality=lossless&width=563&height=563">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
 :root {
